--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "serve": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm install && react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
