--- a/client/package.json
+++ b/client/package.json
@@ -31,5 +31,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "create-react-app": "^3.2.0"
+  }
 }
