--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
-    "nodemailer": "^6.3.0"
+    "nodemailer": "^6.3.0",
+    "react-ga": "^2.7.0"
   },
   "scripts": {
     "start": "node server.js",
