--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
-    "react-ga": "^2.7.0"
+    "react-ga": "^2.7.0",
+    "react-player": "^1.15.2"
   },
   "scripts": {
     "start": "node server.js",
