--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
     "react-ga": "^2.7.0",
-    "react-gtm-module": "^2.0.8"
+    "react-gtm-module": "^2.0.8",
+    "react-player": "^2.6.0"
   },
   "scripts": {
     "start": "node server.js",
