--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
+    "nodemailer-mailgun-transport": "^2.0.0",
     "react-ga": "^2.7.0",
     "react-gtm-module": "^2.0.8",
     "react-player": "^2.6.0"
